[gd_scene load_steps=4 format=3 uid="uid://nq421nx5f7pj"]

[ext_resource type="Script" uid="uid://bjx0ttthsx4wj" path="res://src/scripts/exercises/fill_in_the_blank.gd" id="1_ydag8"]
[ext_resource type="FontFile" uid="uid://cxsv026so27q8" path="res://src/assets/fonts/Ruler 9.ttf" id="2_1134m"]
[ext_resource type="Theme" uid="uid://ch3x2byuiyaxy" path="res://src/assets/themes/menu.tres" id="3_55inh"]

[node name="Fill-in-the-blank" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ydag8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.431373)

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.377
anchor_right = 0.5
anchor_bottom = 0.377
offset_left = -464.0
offset_top = -30.296
offset_right = 474.0
offset_bottom = 29.704
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1134m")
theme_override_font_sizes/font_size = 60
text = "Generic question"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.647
anchor_right = 0.508
anchor_bottom = 0.647
offset_left = -231.216
offset_top = -49.256
offset_right = 230.784
offset_bottom = 48.744
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_55inh")
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
text = "Generic answer 1"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
text = "Generic answer 2"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 7
text = "Generic answer 3"

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 7
text = "Generic answer 4"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button4" to="." method="_on_button_4_pressed"]
